# mockhouse

./: CNAME  Makefile  Procfile  README.md  dev.py  index.html  main.py  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json
artifact_generator/: Makefile  README.md  generate_many_variants.py  pyproject.toml
artifacts/: dummy_project-0.0.1.dev1-1-py3-none-any.whl  dummy_project-0.0.1.dev1-2-py3-none-any.whl  dummy_project-0.0.1.dev1-3-py3-none-any.whl  dummy_project-0.0.1.dev1-4-py3-none-any.whl  dummy_project-0.0.1.dev1-5-py3-none-any.whl  dummy_project-0.0.1.dev1-py3-none-any.whl
mockhouse/: __init__.py  main.py  packaging_utils.py
mockhouse/commands/: main.py
mockhouse/commands/artifact_generator/dummy_project/: pyproject.toml
mockhouse/simpleA/: routes.py
mockhouse/simpleB/: routes.py
mockhouse/templates/: index.html  simple.html  simple_detail.html  variants.html
mockhouse_lib/: pyproject.toml
mockhouse_lib/mockhouse/: __init__.py
mockhouse_lib/mockhouse/commands/: generate_main_index.py  generate_project_index.py  main.py
mockhouse_lib/mockhouse/templates/: main_index.html.j2  project_index.html.j2
pep-766/: index.html
pep-766/simple_A/: index.html
pep-766/simple_B/: index.html
pep-771/: index.html
pep-771-demo-a/: index.html  pep_771_demo_a-1.0.0-py3-none-any.whl
pep-771-demo-b/: index.html
pep-771/pep-771/: index.html  pep_771-1.0.0-py3-none-any.whl
pep-771/pep-771-demo-a/: index.html  pep_771_demo_a-1.0.0-py3-none-any.whl
pep-771/pep-771-demo-b/: index.html  pep_771_demo_b-1.0.0-py3-none-any.whl
pep-xxx-variants/: Makefile  index.html
pep-xxx-variants/dummy-project/: Makefile  dummy_project-0.0.1-py3-none-any-00000000.whl  dummy_project-0.0.1-py3-none-any-03e04d5e.whl  dummy_project-0.0.1-py3-none-any-2c4ac281.whl  dummy_project-0.0.1-py3-none-any-4513a073.whl  dummy_project-0.0.1-py3-none-any-57768a46+quantum-foam.whl  dummy_project-0.0.1-py3-none-any-6b4c8391+deepthought+quantum-foam.whl  dummy_project-0.0.1-py3-none-any-80fa16ff.whl  dummy_project-0.0.1-py3-none-any-9091cdc4.whl  dummy_project-0.0.1-py3-none-any-9cc137a9.whl  dummy_project-0.0.1-py3-none-any-df159646.whl  (+47 more)
pep-xxx-variants/dummy-project-flit/: dummy_project_flit-0.0.1-py3-none-any-00000000.whl  dummy_project_flit-0.0.1-py3-none-any-0123456789abcdef.whl  dummy_project_flit-0.0.1-py3-none-any-03e04d5e.whl  dummy_project_flit-0.0.1-py3-none-any-36028aca.whl  dummy_project_flit-0.0.1-py3-none-any-3f7188c1.whl  dummy_project_flit-0.0.1-py3-none-any-7db6d39f.whl  dummy_project_flit-0.0.1-py3-none-any-808c7f9d.whl  dummy_project_flit-0.0.1-py3-none-any-80fa16ff.whl  dummy_project_flit-0.0.1-py3-none-any-a.whl  dummy_project_flit-0.0.1-py3-none-any-auto_25_super.whl  dummy_project_flit-0.0.1-py3-none-any-autochef_r25_sup.whl  dummy_project_flit-0.0.1-py3-none-any-deepthought_foam.whl  dummy_project_flit-0.0.1-py3-none-any-dthought_c10_fm.whl  dummy_project_flit-0.0.1-py3-none-any-foam_r_e10_impro.whl  dummy_project_flit-0.0.1-py3-none-any-hal9k_c0_6_nfun.whl  dummy_project_flit-0.0.1-py3-none-any-hw_mother_4.whl  dummy_project_flit-0.0.1-py3-none-any-mother_compute4.whl  dummy_project_flit-0.0.1-py3-none-any-null.whl  dummy_project_flit-0.0.1-py3-none-any-tars_c8_funny.whl  dummy_project_flit-0.0.1-py3-none-any.whl  dummy_project_flit-0.0.1-variants.json  index.html
pep-xxx-variants/dummy-project-hatch/: dummy_project_hatch-0.0.1-py3-none-any-00000000.whl  dummy_project_hatch-0.0.1-py3-none-any-03e04d5e.whl  dummy_project_hatch-0.0.1-py3-none-any-36028aca.whl  dummy_project_hatch-0.0.1-py3-none-any-3f7188c1.whl  dummy_project_hatch-0.0.1-py3-none-any-7db6d39f.whl  dummy_project_hatch-0.0.1-py3-none-any-808c7f9d.whl  dummy_project_hatch-0.0.1-py3-none-any-80fa16ff.whl  dummy_project_hatch-0.0.1-py3-none-any-a.whl  dummy_project_hatch-0.0.1-py3-none-any-a0112654.whl  dummy_project_hatch-0.0.1-py3-none-any-foobar.whl  dummy_project_hatch-0.0.1-py3-none-any-foobar2.whl  dummy_project_hatch-0.0.1-py3-none-any-null.whl  dummy_project_hatch-0.0.1-py3-none-any-super_variant_xx.whl  dummy_project_hatch-0.0.1-py3-none-any-super_variant_yy.whl  dummy_project_hatch-0.0.1-py3-none-any-variant.foobar.whl  dummy_project_hatch-0.0.1-py3-none-any-variant_foobar.whl  dummy_project_hatch-0.0.1-py3-none-any.whl  dummy_project_hatch-0.0.1-variants.json  index.html
templates/: detail.html  index.html
(+64 files in other folders)
