[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mockhouse*"]
exclude = ["tests*", "*.tests", "*.tests.*"]
namespaces = true

[project]
name = "mockhouse"
version = "0.0.1.dev1"
description = "A library to generate variant index files"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }
]
maintainers = [
    { name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }
]
dependencies = [
    "jinja2>=3.1,<3.2",
    "variantlib"
]

[project.optional-dependencies]
dev = [
    "check-manifest",
    # Pre Commit Hooks
    "pre-commit>=4,<5",
    # Linting
    "ruff>=0.10,<1.0",
]
test = []

[project.scripts]
mockhouse = "mockhouse.commands.main:main"

[project.entry-points."mockhouse.actions"]
generate-main-index = "mockhouse.commands.generate_main_index:generate_index"
generate-project-index = "mockhouse.commands.generate_project_index:generate_index"

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = "-vvv --cov=mockhouse --cov-report=term-missing"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true