[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mockhouse"
version = "0.0.1.dev1"
description = "A library to generate variant index files"
requires-python = ">=3.9"
authors = [
    { name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }
]
maintainers = [
    { name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }
]
dependencies = [
    "jinja2>=3.1,<3.2",
    "variantlib"
]

[project.optional-dependencies]
dev = [
    "check-manifest",
    # Pre Commit Hooks
    "pre-commit>=4,<5",
    # Linting
    "ruff>=0.10,<1.0",
]
test = []

[project.scripts]
mockhouse = "mockhouse.commands.main:main"

[project.entry-points."mockhouse.actions"]
generate-main-index = "mockhouse.commands.generate_main_index:generate_index"
generate-project-index = "mockhouse.commands.generate_project_index:generate_index"

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = "-vvv --cov=mockhouse --cov-report=term-missing"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true