

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["*"]

[project]
name = "dummy_project"
version = "0.0.1"
description = "A dummy Python project with no code"
readme = ""
requires-python = ">=3.8"
authors = [
  {name = "Michael Sarahan", email = "msarahan@nvidia.com" },
  {name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }
]
maintainers = [
  {name = "Michael Sarahan", email = "msarahan@nvidia.com" },
  {name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" }
]
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Utilities",

    # Pick your license as you wish
    "License :: OSI Approved :: Apache Software License",

    # Not OS Specific
    "Operating System :: OS Independent",

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by "pip install". See instead "requires-python" key in this file.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
]